# coding_agent_usage_tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  CONFIG_AND_IMPORTS.md  Cargo.toml  EXISTING_CODEXBAR_STRUCTURE.md  PLAN_TO_PORT_CODEXBAR_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  RICH_RUST_INTEGRATION_PLAN.md  UPGRADE_LOG.md
.beads/: issues.jsonl
.config/: nextest.toml
.github/workflows/: ci.yml  e2e.yml  integration.yml  release.yml  test.yml
migrations/: 001_usage_snapshots.sql  002_daily_aggregates.sql  003_multi_account.sql
schemas/: caut-v1.schema.json
scripts/: e2e_rich_logging.sh  history_e2e.sh  verify_rich_rust_dep.sh
src/: lib.rs  main.rs  test_utils.rs
src/cli/: args.rs  cost.rs  doctor.rs  history.rs  mod.rs  prompt.rs  query.rs  serve.rs  session.rs  usage.rs  watch.rs
src/core/: budgets.rs  cli_runner.rs  cost_scanner.rs  credential_hash.rs  credential_health.rs  credential_watcher.rs  fetch_plan.rs  http.rs  logging.rs  mod.rs  models.rs  pipeline.rs  prediction.rs  pricing.rs  provider.rs  session_logs.rs  status.rs
src/core/doctor/: checks.rs  mod.rs
src/error/: mod.rs  suggestions.rs
src/providers/: mod.rs
src/providers/claude/: mod.rs
src/providers/codex/: mod.rs
src/render/: doctor.rs  error.rs  human.rs  mod.rs  robot.rs
src/rich/: mod.rs
src/rich/components/: error_panel.rs  formatters.rs  mod.rs  progress_indicator.rs  provider_card.rs  status_badge.rs  usage_bar.rs  usage_table.rs
src/storage/: cache.rs  config.rs  history.rs  history_schema.rs  mod.rs  multi_account.rs  paths.rs  token_accounts.rs
src/tui/: app.rs  dashboard.rs  event.rs  mod.rs  provider_panel.rs
src/util/: env.rs  format.rs  mod.rs  time.rs
tests/: e2e_cost_test.rs  e2e_errors_test.rs  e2e_history_test.rs  e2e_usage_test.rs  fixtures_test.rs  history_integration_test.rs  http_client_test.rs  log_capture_test.rs  logging_format_test.rs  provider_render_pipeline_test.rs  schema_contract_test.rs
tests/common/: fixtures.rs  log_capture.rs  logger.rs  mod.rs
tests/e2e/: test_cost.sh  test_errors.sh  test_usage.sh
tests/fixtures/: README.md
tests/fixtures/claude/: cli_output_legacy.txt  cli_output_v0.2.105.txt  credentials_empty.json  credentials_full.json  credentials_minimal.json  rate_limit_empty.json  rate_limit_full.json  rate_limit_partial.json
tests/fixtures/codex/: auth_api_key.json  auth_both.json  auth_oauth.json  jwt_claims_sample.json  rate_limit_credits_only.json  rate_limit_full.json  rate_limit_user_only.json
tests/fixtures/cost/: claude_stats_cache.json  (+3 more)
(+22 files in other folders)
